--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
+  margin: 0;
   justify-content: center;
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
-  margin-bottom: 10px;
 }
